hard-gists/6229929/run.log
=== Docker Run Log for 6229929 ===
Started at: Mi 29. Okt 16:27:08 CET 2025

[2025-10-29 16:27:08] START: Running container for 6229929
[2025-10-29 16:27:08] SUCCESS: Container 0fe97b6c976f43d1198776a5ffd99e101be2972387293650e385c8084b406306 started for 6229929
=== Container logs for 6229929 ===
  File "/snippet.py", line 35
    print "> sonar-runner " + '-Dsonar.projectDate={0}'.format(date.date().isoformat())
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 6229929 ===
[2025-10-29 16:27:10] INFO: Container 0fe97b6c976f43d1198776a5ffd99e101be2972387293650e385c8084b406306 has stopped
